...
    breedName: String,
    isFavorite: Boolean,
    onFavoriteToggle: (String, Boolean) -> Unit,
    modifier: Modifier = Modifier
) {
    Box(
        modifier = modifier.padding(12.dp).testTag("CatBreedItem"),
        contentAlignment = Alignment.TopEnd
    ) {
        Column {
            AsyncImage(
                model = imageUrl,
                contentDescription = null,
...
@Preview
@Composable
fun CatBreedItem_Preview() {
    CatBreedItem(
        id = "id",
        imageUrl = "https://cdn2.thecatapi.com/images/ozEvzdVM-.jpg",
        breedName = "Abyssinian",
        isFavorite = true,
        onFavoriteToggle = {_,_ ->}
    )
}
