...

@Preview
@Composable
fun BreedDetailsComponent_Preview() {
    BreedDetailsComponent(
        catBreedDetails = CatBreedDetails(
            "id", "image", "Abyssinian", "Description", "origin", listOf("temperament"), true
        ), onFavoriteToggle = { _, _ -> }, onBackPressed = {}
    )
}
